--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Exercicios - 1</title>
 </head>
 <body>
-    <script src="exemplo.js"></script>
+    <!-- <script src="exemplo.js"></script> -->
 
-    <script src="ex1.js"></script>
+    <!-- <script src="ex1.js"></script> -->
+
+    <script src="ex2.js"></script>
 
 </body>
 </html>
