--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <!-- <script src="ex2.js"></script> -->
 
-    <script src="ex3.js"></script>
+    <!-- <script src="ex3.js"></script> -->
+
+    <script src="ex4.js"></script>
 </body>
 </html>
