--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
     <!-- <script src="ex4.js"></script> -->
 
-    <script src="ex5.js"></script>
+    <!-- <script src="ex5.js"></script> -->
+
+    <script src="ex6.js"></script>
 </body>
 </html>
