--- a/function e objeto/index.html
+++ b/function e objeto/index.html
@@ -6,10 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <script src="exemplo.js"></script> -->
-
-    <!-- <script src="exemplo-function.js"></script> -->
-
-    <script src="exemplo-obj.js"></script>
+    <script src="exFunção.js"></script>
 </body>
 </html>
