--- a/exemplos/index.html
+++ b/exemplos/index.html
@@ -8,8 +8,10 @@
 <body>
     <!-- <script src="exemplo.js"></script> -->
 
-    <script src="exemplo-function.js"></script>
+    <!-- <script src="exemplo-function.js"></script> -->
 
     <!-- <script src="exemplo-obj.js"></script> -->
+    
+    <script src="exemploDOM.js"></script>
 </body>
 </html>
